# openGL

./: .gitignore  README.md  temp.cpp
1. OnlyBkg/: play  renderer.h
2. triangle/: main.cpp  play  renderer.cpp  shader.h
3. texture/: buffer.cpp  buffer.h  frag.glsl  main.cpp  play  shader.cpp  shader.h  texture.glsl  textures.cpp  textures.h  vert.glsl
completed/1. OnlyBkg/: main.cpp  renderer.cpp
completed/2. triangle/: Makefile  frag.glsl  main.cpp  renderer.h  vert.glsl
completed/2.5 Refactored/: Makefile  buffer.cpp  buffer.h  debug.cpp  frag.glsl  main.cpp  renderer.cpp  shader.cpp  shader.h  vert.glsl
completed/3. Texture/: buffer.cpp  buffer.h  debug.h  demo.cpp  frag.glsl  main.cpp  renderer.cpp  shader.cpp  texture.glsl  vert.glsl
completed/4. Cube/: buffer.cpp  buffer.h  main.cpp  matrices.h  renderer.cpp  shader.cpp  texture.glsl
incomplete/4.5 Doxygen&refactoring/: Makefile
incomplete/4.5 Doxygen&refactoring/cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.h  config.h.in  main.cpp
incomplete/4.5 Doxygen&refactoring/doc/: dox.conf
incomplete/4.5 Doxygen&refactoring/doc/html/: annotated.html  buffer_8h_source.html  classBuffer-members.html  classBuffer.html  classDebug-members.html  classDebug.html  classMatrix-members.html  classMatrix.html  classRenderer-members.html  classRenderer.html  classShader-members.html  classShader.html  classes.html  debug_8h_source.html  error_8h_source.html  files.html  functions.html  functions_func.html  index.html  (+5 more)
incomplete/4.5 Doxygen&refactoring/src/: main.cpp
(+17 files in other folders)
